# DIA-anal

./: .gitignore  README.md  data_med.xlsx  pyproject.toml  run_app.bat
app/: README.md  app.R  run_app.R
app/R/: advanced_plots.R  advanced_processing.R  assistant.R  compare.R  export_helpers.R  ingest.R  interpretation.R  platform_ingest.R  presets.R  quality.R  science_plots.R  science_processing.R  tables.R  template.R  themes.R  transform.R
app/R/plots/: crecimiento.R  distribucion.R  heatmap.R  nivel_logro.R  promedio.R  tendencia.R  violin.R
app/inst/extdata/: data_basica.xlsx
app/installer/: README.md  build_installer.R
app/scripts/: install_deps.R  smoke_test.R
scripts/: bootstrap.ps1
src/dia_plots/: cli.py  io.py  plotting.py
